402 button fixed on mobile view

--- a/laterpay/asset_sources/scss/components/_purchase_button.scss
+++ b/laterpay/asset_sources/scss/components/_purchase_button.scss
@@ -13,6 +13,8 @@
     position: relative !important;
     text-decoration: none !important;
     z-index: $zindex--elevated-1 !important;
+    position: relative !important;
+    padding-left: ($fs--3 - 10) !important;
 
     /**
      * LaterPay logo (rendered in pseudo element from icon font)
@@ -23,8 +25,9 @@
         font-size: $fs--2 !important;
         line-height: 0 !important; /* 1 */
         margin: 0 (-$fs--025) 0 0 !important;
-        position: relative !important;
+        position: absolute !important;
         top: 9px !important;
+        left: 0 !important;
     }
 }
 
@@ -55,10 +58,11 @@
     font-weight: normal !important;
     line-height: 1.3 !important;
     margin: 0 !important;
-    padding: $fs--025 $fs--025 0 0 !important;
+    padding: $fs--025 $fs--025 0 $fs--4 !important;
     text-decoration: none !important;
     text-shadow: 0 -1px 0 darken($laterpay-brand--darker, 13%) !important;
     white-space: nowrap !important;
+    position: relative !important;
 
     /**
      * LaterPay logo (rendered in pseudo element from icon font)
@@ -68,11 +72,13 @@
      */
     &:before {
         font-size: 49px !important; /* 1 */
-        left: -$fs--025 !important;
-        line-height: 0 !important; /* 2 */
+        line-height: .5 !important; /* 2 */
         margin: 0 (-$fs--05) 0 0 !important;
-        position: relative !important;
-        top: ($fs * 1.1) !important;
+        position: absolute !important;
+        width: (round($fs * 4.35));
+        left: 0;
+        top: $fs--08;
+
     }
 
     &:hover,
@@ -87,6 +93,10 @@
     &:active {
         border-top-color: transparent !important;
         border-width: 2px 1px 0 0 !important;
+
+        &:before {
+            top: ($fs--08 + 1);
+        }
     }
 }
 
